*se crea servicio en el ejb de insertar un nuevo usuario *se crean un paquete con las posibles excepciones que puedan llegar a ocurrir

--- a/BancoPruebaTecnica-web/pom.xml
+++ b/BancoPruebaTecnica-web/pom.xml
@@ -20,6 +20,12 @@
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>co.banco</groupId>
+            <artifactId>BancoPruebaTecnica-ejb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
        <dependency>
             <groupId>org.eclipse.persistence</groupId>
             <artifactId>eclipselink</artifactId>
