--- a/BancoPruebaTecnica-ejb/pom.xml
+++ b/BancoPruebaTecnica-ejb/pom.xml
@@ -33,6 +33,18 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>com.mycompany</groupId>
+            <artifactId>jta-ejb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>edu.unicundi</groupId>
+            <artifactId>maestros-ejb</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
